--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bunny-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://akarthikbunny.github.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
