--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: [Update LeetCode Rating]
+    branches: [main]
+    types:
+      - completed
 
 permissions:
   contents: read
